# mcp-paper-assistant

./: .env  .gitignore  README.md  app.py  pyproject.toml
mcp_paper_assistant/: __init__.py  logging_config.py  settings.py
mcp_paper_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp_paper_assistant/client/: __init__.py  app.py  client.py  client_factory.py
mcp_paper_assistant/prompts/: system_prompt.json
mcp_paper_assistant/scripts/: arxiv_api.py  send_requests.py
mcp_paper_assistant/server/: __init__.py  app.py  server.py
mcp_paper_assistant/tools/: __init__.py  generate_search.py  search_paper.py
